open a new tab by clicking on links

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
   <hr>
   <h3>Social Media</h3>
   <ul>
-    <li><a href="https://www.xing.com/profile/osama_Madani2/cv">Xing Profil</a></li>
-    <li><a href="https://at.linkedin.com/in/osama-madani-abba0015b?challengeId=AQHOkSgBxjLwPgAAAX9z_PXeEzXawYKpme_BG4XKdUA5b4A-qUlnp_THgq4BMRQ1DVYHTCcr5_DRQOWskwgClcf0eQztoXybDQ&submissionId=51b00790-9607-db16-4b31-78ec62166e1c">LinkedIn Profil</a>
+    <li><a href="https://www.xing.com/profile/osama_Madani2/cv" target="_blank" rel="noopener noreferrer" >Xing Profil</a></li>
+    <li><a href="https://at.linkedin.com/in/osama-madani-abba0015b?challengeId=AQHOkSgBxjLwPgAAAX9z_PXeEzXawYKpme_BG4XKdUA5b4A-qUlnp_THgq4BMRQ1DVYHTCcr5_DRQOWskwgClcf0eQztoXybDQ&submissionId=51b00790-9607-db16-4b31-78ec62166e1c" target="_blank" rel="noopener noreferrer">LinkedIn Profil</a>
     </li>
   </ul>
-  <h3><a href="ContactMe.html">Contact Me</a></h3>
+  <h3><a href="ContactMe.html" target="_blank" rel="noopener noreferrer">Contact Me</a></h3>
 </body>
 
 </html>
